Envio do questionário para o grupo python e stackoverflow

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,6 @@ ENV/
 .ropeproject
 #Arquivos de configuração
 *conf.py
+#Arquivos específicos do projeto
+docs/stackoverflow-recipients.csv
+docs/python-recipients.csv
